package final_test_practice.observer.CA1.a;

public interface MyStreamListener<T> {
    void listen(T t);
}
